--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                      <h2 class="animated" data-animate="fadeInUp" data-delay="0">Secure, Untraceable yet Simple Currency</h2>
                      <p class="lead animated" data-animate="fadeInUp" data-delay=".2">
                         CryptoNote technology is the backbone of ReCoal.
-                        In other words, we can say, ReCoal will always stay profitable to every single miner.
+                        In other words, we can say that ReCoal transactions cannot be traced it any way.
+			And ReCoal will always stay profitable to every single miner.
                      </p>
                   </div>
                </div>
