--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                      <li class="nav-item"><a class="nav-link menu-link" href="https://devpool.recoal.gq/">Dev Pool</a></li>
                   </ul>
                   <ul class="navbar-nav navbar-btns animated" data-animate="fadeInDown" data-delay="1.15">
-                     <li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link" href="https://stellite.cash/whitepaper.pdf">Whitepaper</a></li>
+                     <!--<li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link" href="whitepaper.pdf">Whitepaper</a></li>-->
                   </ul>
                </div>
             </nav>
