--- a/index.html
+++ b/index.html
@@ -227,32 +227,32 @@
                </div>
                <div class="col-md-6 col-lg-3">
                   <div class="team-circle animated" data-animate="fadeInUp" data-delay=".3">
-                     <div class="team-photo"> <img src="assets/img/team/arkadiy.png" alt="team"></div>
+                     <div class="team-photo"> <img src="assets/img/team/aneki.png" alt="team"></div>
                      <div class="team-info">
-                        <h5 class="team-name">Arkadiy Deliev</h5>
-                        <span class="team-title">CO-FOUNDER &amp; OPERATIONS MANAGER</span>
+                        <h5 class="team-name">Elektryon Mihai</h5>
+                        <span class="team-title">DEVELOPER</span>
                      </div>
                   </div>
                </div>
                <div class="col-md-6 col-lg-3">
                   <div class="team-circle animated" data-animate="fadeInUp" data-delay=".4">
-                     <div class="team-photo"> <img src="images/felix.png" alt="team"></div>
+                     <div class="team-photo"> <img src="assets/img/team/aneki.png" alt="team"></div>
                      <div class="team-info">
-                        <h5 class="team-name">Felix Huber</h5>
-                        <span class="team-title">MARKETING, DESIGN &amp; FRONT-END DEV</span>
+                        <h5 class="team-name">Romy Toklio</h5>
+                        <span class="team-title">MOBILE DEVELOPER</span>
                      </div>
                   </div>
                </div>
                <div class="col-md-6 col-lg-3">
                   <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
-                     <div class="team-photo"> <img src="images/eric.png" alt="team"></div>
+                     <div class="team-photo"> <img src="assets/img/team/aneki.png" alt="team"></div>
                      <div class="team-info">
-                        <h5 class="team-name">Eric Michel</h5>
-                        <span class="team-title">BACK-END DEVELOPER & JAVA NINJA</span>
+                        <h5 class="team-name">DEEP RAJ</h5>
+                        <span class="team-title">WALLET DEVELOPER</span>
                      </div>
                   </div>
                </div>
-               <div class="col-md-6 col-lg-3">
+               <!-- <div class="col-md-6 col-lg-3">
                   <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
                      <div class="team-photo"> <img src="https://stellite.cash/assets/img/team/erwin.png" alt="team"></div>
                      <div class="team-info">
@@ -320,7 +320,7 @@
                      </div>
                   </div>
                </div>
-            </div>
+            </div>--->
          </div>
       </div>
       <div class="section section-pad section-bg-alt" id="partners">
