--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
                         </div>
                      </div>
                   </div>
-               </div>
-            </div>--->
+               </div>-->
+            </div>
          </div>
       </div>
       <div class="section section-pad section-bg-alt" id="partners">
