--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             </div>
          </div>
       </div>
-      <div class="section section-pad section-bg-alt" id="partners">
+      <!-- <div class="section section-pad section-bg-alt" id="partners">
          <div class="container">
             <div class="row text-center">
                <div class="col">
@@ -346,7 +346,7 @@
                   </div>
                </div>
             </div>
-         </div>
+         </div> -->
       </div>
       <div class="section subscribe-section section-pad-md section-bg section-connect">
          <div class="container">
