--- a/paperwallet.html
+++ b/paperwallet.html
@@ -10806,7 +10806,7 @@ QEElhBBCAkBBJYQQQnIj8m8Nkcfh4eoeLgAAAABJRU5ErkJggg==" style="height:64px">
                 This page generates a new
                 <select onchange="js:setCoin(this.selectedIndex);" class="waves-effect waves-light btn" style="max-width: 20%">
                   <option>ReCoal Testnet</option>
-				  <!--<option>ReCoal Mainnet</option>-->
+		  <option>ReCoal Mainnet</option>
 				  <!--<option>Monero</option>
                   <option>Aeon</option>-->
                 </select>
