--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
                <div class="collapse navbar-collapse justify-content-end" id="navbarToggle">
                   <ul class="navbar-nav animated" data-animate="fadeInDown" data-delay=".9">
-                     <li class="nav-item"><a class="nav-link menu-link" href="http://explorer.recoal.gq/">Block Explorer</a></li>
+                     <li class="nav-item"><a class="nav-link menu-link" href="http://explorer.recoal.org/">Block Explorer</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="paperwallet.html">Paper Wallet</a></li>
                      <!--<li class="nav-item"><a class="nav-link menu-link" href="https://wiki.stellite.cash/">Wiki</a></li>-->
-                     <li class="nav-item"><a class="nav-link menu-link" href="https://devpool.recoal.gq/">Dev Pool</a></li>
+                     <li class="nav-item"><a class="nav-link menu-link" href="https://devpool.recoal.org/">Dev Pool</a></li>
                   </ul>
                   <ul class="navbar-nav navbar-btns animated" data-animate="fadeInDown" data-delay="1.15">
                      <!--<li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link" href="whitepaper.pdf">Whitepaper</a></li>-->
@@ -52,10 +52,10 @@
                            </ul>
                            <ul class="social">
                               <li class="animated" data-animate="fadeInUp" data-delay="1.85"><a href="#"><em class="fab fa-facebook"></em></a></li>
-                              <li class="animated" data-animate="fadeInUp" data-delay="1.9"><a href="#"><em class="fab fa-twitter"></em></a></li>
+                              <li class="animated" data-animate="fadeInUp" data-delay="1.9"><a href="https://twitter.com/coal_re"><em class="fab fa-twitter"></em></a></li>
                               <li class="animated" data-animate="fadeInUp" data-delay="2"><a href="https://github.com/ReCoal"><em class="fab fa-github"></em></a></li>
                               <li class="animated" data-animate="fadeInUp" data-delay="2.05"><a href="#"><em class="fab fa-reddit"></em></a></li>
-                              <li class="animated" data-animate="fadeInUp" data-delay="2.15"><a href="#"><em class="fab fa-discord"></em></a></li>
+                              <li class="animated" data-animate="fadeInUp" data-delay="2.15"><a href="https://discord.gg/tj44eAg"><em class="fab fa-discord"></em></a></li>
                            </ul>
                         </div>
                      </div>
@@ -366,10 +366,10 @@
                <div class="col-md-12">
                   <ul class="social">
                               <li class="animated" data-animate="fadeInUp" data-delay="1.85"><a href="#"><em class="fab fa-facebook"></em></a></li>
-                              <li class="animated" data-animate="fadeInUp" data-delay="1.9"><a href="#"><em class="fab fa-twitter"></em></a></li>
+                              <li class="animated" data-animate="fadeInUp" data-delay="1.9"><a href="https://twitter.com/coal_re"><em class="fab fa-twitter"></em></a></li>
                               <li class="animated" data-animate="fadeInUp" data-delay="2"><a href="https://github.com/ReCoal"><em class="fab fa-github"></em></a></li>
                               <li class="animated" data-animate="fadeInUp" data-delay="2.05"><a href="#"><em class="fab fa-reddit"></em></a></li>
-                              <li class="animated" data-animate="fadeInUp" data-delay="2.15"><a href="#"><em class="fab fa-discord"></em></a></li>
+                              <li class="animated" data-animate="fadeInUp" data-delay="2.15"><a href="https://discord.gg/tj44eAg"><em class="fab fa-discord"></em></a></li>
                   </ul>
                   <span class="copyright-text animated" data-animate="fadeInUp" data-delay=".3"> Copyright &copy; 2018, ReCoal.</span>
                </div>
