--- a/paperwallet.html
+++ b/paperwallet.html
@@ -11298,7 +11298,7 @@ genwallet();
 }
 </style>
 <div class="footer" link="white">
-  <p style="font-family:verdana;color:white">ReCoal &copy; 2018 Paper Wallet/Offline wallet Generator. Find us on <a href="https://github.com/ReCoal" style="color:white;"><i class="fa fa-github" style="font-size:24px"></i></a>  Support :<u><a style="color:white;" href="mailto:walletdev@recoal.gq">walletdev@recoal.gq</a></u></p>
+  <p style="font-family:verdana;color:white">ReCoal &copy; 2018 Paper Wallet/Offline wallet Generator. Find us on <a href="https://github.com/ReCoal" style="color:white;"><i class="fa fa-github" style="font-size:24px"></i></a>  Support :<u><a style="color:white;" href="mailto:walletdev@recoal.org">walletdev@recoal.gq</a></u></p>
 </div>
 </body>
 </html>
