--- a/paperwallet.html
+++ b/paperwallet.html
@@ -10813,8 +10813,7 @@ QEElhBBCAkBBJYQQQnIj8m8Nkcfh4eoeLgAAAABJRU5ErkJggg==" style="height:64px">
                 wallet. It is self contained and
                 does all the necessary calculations locally, so is suitable for generating a new wallet on a machine
                 that is not connected to the network, and may even never be. This way, you can create
-                a ReCoal without risking the keys. This file is GPG signed, see <a href="#gpg-instructions">GPG instructions</a>.
-                You can check for up to date versions of this page
+                a ReCoal wallet without risking the keys.You can check for up to date versions of this page
                 <a href="https://github.com/ReCoal/recoal-wallet-generator/recoal-wallet-generator.html">here</a>.
             </p>
         </div>
