--- a/paperwallet.html
+++ b/paperwallet.html
@@ -10830,7 +10830,7 @@ QEElhBBCAkBBJYQQQnIj8m8Nkcfh4eoeLgAAAABJRU5ErkJggg==" style="height:64px">
             <form>
                 <input class="btn deep-orange" type="button" onclick="js:genwallet_prefix();" value="Generate wallet with prefix" action="" id="gen_prefix_widget"/>
                 <p>(very slow for more than a few characters)</p>
-                <input type="text" value="ct" id="prefix_widget" oninput="js:check_prefix_validity()"; />
+                <input type="text" value="co" id="prefix_widget" oninput="js:check_prefix_validity()"; />
             </form>
         </div>
     </div>
