--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             </div>
          </div>
       </header>
+	  <iframe src="date.html" height="250" width="100%"></iframe>
       <!--<div class="section section-pad section-bg-blend nopb" id="intro">
          <div class="container">
             <div class="row align-items-center">
@@ -221,7 +222,16 @@
                      <div class="team-photo"> <img src="assets/img/team/aneki.png" alt="dev" /></div>
                      <div class="team-info">
                         <h5 class="team-name">Pranav M S</h5>
-                        <span class="team-title">FOUNDER, LEAD DEVELOPER &amp; FRONT-END DEV</span>
+                        <span class="team-title">FOUNDER and LEAD DEVELOPER</span>
+                     </div>
+                  </div>
+               </div>
+			   <div class="col-md-6 col-lg-3">
+                  <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
+                     <div class="team-photo"> <img src="assets/img/team/aneki.png" alt="team"></div>
+                     <div class="team-info">
+                        <h5 class="team-name">Deepraj</h5>
+                        <span class="team-title">CO-DEVELOPER</span>
                      </div>
                   </div>
                </div>
@@ -240,15 +250,6 @@
                      <div class="team-info">
                         <h5 class="team-name">Romy Toklio</h5>
                         <span class="team-title">MOBILE DEVELOPER</span>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-6 col-lg-3">
-                  <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
-                     <div class="team-photo"> <img src="assets/img/team/aneki.png" alt="team"></div>
-                     <div class="team-info">
-                        <h5 class="team-name">DEEP RAJ</h5>
-                        <span class="team-title">WALLET DEVELOPER</span>
                      </div>
                   </div>
                </div>
